        Reviewed by Darin.

http://bugs.webkit.org/show_bug.cgi?id=10370
        RegExp fails to match non-ASCII characters against [\S\s]

        Test: fast/js/regexp-negative-special-characters.html

        * pcre/pcre_compile.c:
        (compile_branch): Adjust opcode and bitmap as necessary to include (or exclude)
        character codes >255. Fix suggested by Philip Hazel.

        * pcre/pcre_exec.c:
        (match): Merged fix for PCRE bug 580 (\S\S vs. \S{2}).

        * tests/mozilla/expected.html: One test was fixed.
        * pcre/MERGING: Added information about this fix.



Canonical link: https://commits.webkit.org/20468@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@26478 268f45cc-cd09-0410-ab3c-d52691b4dbfc