JavaScriptCore/pcre/pcre_exec.c
@@ -2728,9 +2728,9 @@ for (;;)
         for (i = 1; i <= min; i++)
           {
           if (eptr >= md->end_subject ||
-             (*eptr < 128 && (md->ctypes[*eptr++] & ctype_space) != 0))
+             (*eptr < 128 && (md->ctypes[*eptr] & ctype_space) != 0))
             RRETURN(MATCH_NOMATCH);
-          while (eptr < md->end_subject && ISMIDCHAR(*eptr)) eptr++;
+          while (++eptr < md->end_subject && ISMIDCHAR(*eptr));
           }
         break;
 
@@ -2748,9 +2748,9 @@ for (;;)
         for (i = 1; i <= min; i++)
           {
           if (eptr >= md->end_subject ||
-             (*eptr < 128 && (md->ctypes[*eptr++] & ctype_word) != 0))
+             (*eptr < 128 && (md->ctypes[*eptr] & ctype_word) != 0))
             RRETURN(MATCH_NOMATCH);
-          while (eptr < md->end_subject && ISMIDCHAR(*eptr)) eptr++;
+          while (++eptr < md->end_subject && ISMIDCHAR(*eptr));
           }
         break;
 
